# cmake

./: .gitignore  README.md
c/: CMakeLists.txt  readme.txt
qt/: CMakeLists.txt  readme.txt
qt/scripts/win/: dev_qt5_vs2015x86static.bat  qt5_11_3_x64.bat  qt5_11_3_x86.bat  vc2015_x86.bat  vs2015_x64.bat
with_python/: CMakeLists.txt  readme.txt  test.py
